# KORA

./: .gitignore  README.md  launch_kora.bat  launch_kora.sh  pyproject.toml
.github/workflows/: ci.yml  tests.yml
RAG/AI_Fundamentals-textbook/: CODE_OF_CONDUCT.md  LICENSE.md  README.md  SECURITY.md
RAG/AI_Fundamentals-textbook/aibasics/: AEwithBM.md  about.md  autoencoders.md  boltzmann.md  cuda.md  deepperceptron.md  encoder_transformer_decoder.md  hopfieldnetwork.md  isingmodel.md  linearperceptron.md  normalizingflow.md  performances.md  transformer.md
RAG/AI_Fundamentals-textbook/aibasics/Homework/: DP_homework.md  HOPFIELD_homework.md  ISING_homework.md  LP_homework.md  RBM_homework.md
kora/: ingest.py  rag.py  store.py  ui.py
kora.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: test_ingest.py  test_rag.py  test_store.py
